DER_NORMAL/derNormal.g4
grammar izqNormal;

programa: expresion EOF;

expresion
    : factor SUM expresion
    | factor RES expresion
    | factor
    ;

factor
    : factor MUL term
    | factor DIV term
    | term
    ;

term
    : NUM
    | RES NUM
    ;

SUM: '+';
RES: '-';
MUL: '*';
DIV: '/';

NUM: DECIMAL | ENTERO;
DECIMAL: DIGITO+ '.' DIGITO+; 
ENTERO: DIGITO+;

fragment DIGITO: [0-9];

WS: [ \t]+ -> skip;
